Complete home section

--- a/index.html
+++ b/index.html
@@ -11,22 +11,44 @@
 
 <body>
   <!-- home -->
-  <div class="section home">
-    Home
+  <div class="section home" id="home">
+    <div class="nav blue">
+      <ul>
+        <li><a href="#awards">Awards</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#home">Home</a></li>
+      </ul>
+    </div>
+    <div class="main">
+      <h1>
+        ⌐<span class="yellow">00</span><br>
+        Hi there!<br>
+        I am Zarif Muhtasim Showgat.
+      </h1>
+    </div>
+    <div class="social orange">
+      <ul>
+        <li><a href="http://">Facebook</a></li>
+        <li><a href="http://">GitHub</a></li>
+        <li><a href="http://">Codeforces</a></li>
+        <li><a href="http://">Leetcode</a></li>
+      </ul>
+    </div>
   </div>
 
   <!-- about -->
-  <div class="section">
+  <div class="section about" id="about">
     About
   </div>
 
   <!-- projects -->
-  <div class="section">
+  <div class="section projects" id="projects">
     Projects
   </div>
 
   <!-- awards -->
-  <div class="section">
+  <div class="section awards" id="awards">
     Awards
   </div>
 
