Complete about me section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,19 @@
 
   <!-- about -->
   <div class="section about" id="about">
-    About
+    <div class="right">
+      <h1>
+        ⌐<span class="yellow">00</span><br>
+      </h1>
+    </div>
+    <div class="left">
+      <h1 class="orange">ABOUT ME</h1>
+      <h3>I'm Zarif Muhtasim, a competitive programmer passionate about Python. With a focus on efficient problem-solving,
+        I enjoy creating projects that leverage Python's versatility and libraries. My portfolio showcases clean, scalable
+        code and collaborative teamwork. Constantly learning, I stay updated with the latest technologies and seek new
+        challenges. Let's connect and explore the exciting world of coding together!
+      </h3>
+    </div>
   </div>
 
   <!-- projects -->
