--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     </div>
     <div class="social orange">
       <ul>
-        <li><a href="http://">Facebook</a></li>
-        <li><a href="http://">GitHub</a></li>
-        <li><a href="http://">Codeforces</a></li>
-        <li><a href="http://">Leetcode</a></li>
+        <li><a href="http://fb.com/zarif2502">Facebook</a></li>
+        <li><a href="http://github.com/roundspecs/">GitHub</a></li>
+        <li><a href="http://codeforces.com/profile/roundspecs">Codeforces</a></li>
+        <li><a href="https://leetcode.com/Zarif25/">Leetcode</a></li>
       </ul>
     </div>
   </div>
@@ -46,8 +46,10 @@
     </div>
     <div class="left">
       <h1 class="orange">ABOUT ME</h1>
-      <h3>I'm Zarif Muhtasim, a competitive programmer passionate about Python. With a focus on efficient problem-solving,
-        I enjoy creating projects that leverage Python's versatility and libraries. My portfolio showcases clean, scalable
+      <h3>I'm Zarif Muhtasim, a competitive programmer passionate about Python. With a focus on efficient
+        problem-solving,
+        I enjoy creating projects that leverage Python's versatility and libraries. My portfolio showcases clean,
+        scalable
         code and collaborative teamwork. Constantly learning, I stay updated with the latest technologies and seek new
         challenges. Let's connect and explore the exciting world of coding together!
       </h3>
