Open link in new tab

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     </div>
     <div class="social orange">
       <ul>
-        <li><a href="http://fb.com/zarif2502">Facebook</a></li>
-        <li><a href="http://github.com/roundspecs/">GitHub</a></li>
-        <li><a href="http://codeforces.com/profile/roundspecs">Codeforces</a></li>
-        <li><a href="https://leetcode.com/Zarif25/">Leetcode</a></li>
+        <li><a href="http://fb.com/zarif2502" target="_blank">Facebook</a></li>
+        <li><a href="http://github.com/roundspecs/" target="_blank">GitHub</a></li>
+        <li><a href="http://codeforces.com/profile/roundspecs" target="_blank">Codeforces</a></li>
+        <li><a href="https://leetcode.com/Zarif25/" target="_blank">Leetcode</a></li>
       </ul>
     </div>
   </div>
