Add projects and awards

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </h1>
     </div>
     <div class="left">
-      <h1 class="orange">ABOUT ME</h1>
+      <h1 class="orange heading">ABOUT ME</h1>
       <h3>I'm Zarif Muhtasim, a competitive programmer passionate about Python. With a focus on efficient
         problem-solving,
         I enjoy creating projects that leverage Python's versatility and libraries. My portfolio showcases clean,
@@ -58,12 +58,102 @@
 
   <!-- projects -->
   <div class="section projects" id="projects">
-    Projects
+    <h1 class="orange heading">
+      PROJECTS
+    </h1>
+    <div class="project-item">
+      <h2><span class="yellow">SublimeBot</span></h2>
+      <h3>A discord bot for Competitive Programmers of CUET </h3>
+      <p><b class="orange">Technologies: </b> Python, discord.py, API, Pandas, CSV, requests</p>
+      <a href="https://github.com/roundspecs/SublimeBot" class="blue">View in GitHub</a>
+    </div>
+    <div class="project-item">
+      <h2><span class="yellow"> Unicode2Bijoy</span></h2>
+      <h3>A python script that takes Unicode string converts it into Bijoy</h3>
+      <p><b class="orange">Technologies: </b> Python, Bijoy, Unicode</p>
+      <a href="https://github.com/roundspecs/unicode-to-bijoy" class="blue">View in Github</a>
+    </div>
+    <div class="project-item">
+      <h2><span class="yellow">TicTacToe</span></h2>
+      <h3>A terminal based TicTacToe Game with Java</h3>
+      <p><b class="orange">Technologies: </b> Java, ASCII table</p>
+      <a href="https://github.com/roundspecs/TicTacToe" class="blue">View in Github</a>
+    </div>
+    <div class="project-item">
+      <h2><span class="yellow">2048</span></h2>
+      <h3>A terminal based 2048 with python</h3>
+      <p><b class="orange">Technologies: </b> Python, pynput</p>
+      <a href="https://github.com/roundspecs/2048" class="blue">View in Github</a>
+    </div>
+    <div class="project-item">
+      <h2><span class="yellow">PythonPeriodicTable</span></h2>
+      <h3>A python program that tells you the details about any element of the periodic table</h3>
+      <p><b class="orange">Technologies: </b> Python</p>
+      <a href="https://github.com/roundspecs/PythonPeriodicTable" class="blue">View in Github</a>
+    </div>
+    <div class="project-item">
+      <h2><span class="yellow">Tetris</span> </h2>
+      <h3>Tetris with python using curses</h3>
+      <p><b class="orange">Technologies: </b> Python, windows-curses</p>
+      <a href="https://github.com/roundspecs/Tetris" class="blue">View in Github</a>
+    </div>
+    <div class="project-item">
+      <h2><span class="yellow">DxBall</span></h2>
+      <h3>Dx Ball Game with p5.js</h3>
+      <p><b class="orange">Technologies: </b> JS, HTML, CSS, P5.js</p>
+      <a href="https://github.com/roundspecs/DxBall" class="blue">View in Github</a>
+    </div>
+    <div class="project-item">
+      <h2><span class="yellow">Snake</span></h2>
+      <h3>A browser-based snake game with p5.js</h3>
+      <p><b class="orange">Technologies: </b> JS, HTML, CSS, P5.js</p>
+      <a href="https://github.com/roundspecs/Snake" class="blue">View in Github</a>
+    </div>
+    <div class="project-item">
+      <h2><span class="yellow">UnoKotlin</span></h2>
+      <h3>A terminal based Uno game made with Kotlin</h3>
+      <p><b class="orange">Technologies: </b> Kotlin</p>
+      <a href="https://github.com/roundspecs/UnoKotlin" class="blue">View in Github</a>
+    </div>
+    <div class="project-item">
+      <h2><span class="yellow"> Flutter Snake</span></h2>
+      <h3>A Snake game app made with Flutter</h3>
+      <p><b class="orange">Technologies: </b> Dart, Flutter</p>
+      <a href="https://github.com/roundspecs/flutter-snake" class="blue">View in Github</a>
+    </div>
+    <div class="project-item">
+      <h2><span class="yellow"> Master Spelling</span></h2>
+      <h3>A TUI application that helps you master your spelling skills</h3>
+      <p><b class="orange">Technologies: </b> Python, Text to Speech, pyttsx3, curses, TUI, JSON</p>
+      <a href="https://github.com/roundspecs/Master-Spelling" class="blue">View in Github</a>
+    </div>
+    <div class="project-item">
+      <h2><span class="yellow"> Asr</span></h2>
+      <h3>A time tracking and journaling tool made with Python</h3>
+      <p><b class="orange">Technologies: </b> Python, curses, TUI, JSON, rich, typer, shellingham</p>
+      <a href="https://github.com/roundspecs/asr" class="blue">View in Github</a>
+    </div>
   </div>
 
   <!-- awards -->
   <div class="section awards" id="awards">
-    Awards
+    <h1 class="orange heading">
+      AWARDS
+    </h1>
+    <div class="project-item">
+      <h2><span class="yellow">BASIS ICT Award</span></h2>
+      <h3>I and my team, made an AI based Browser extension that can detect if a news is fake, in realtime</h3>
+      <p><b class="orange">Technologies: </b> Python, JS, Google Bucket, Facebook API</p>
+      <a href="https://www.facebook.com/teamprodigy101/posts/pfbid035epKCXFibAHuG3KCfbpvHNUincqdLcGcjzhZd6paE2NVi6NK9Ew1XJ8VS5u16rsNl?__cft__[0]=AZWmftfGBhVK4PUPNYFgn8sUJMXXUgXnywac90XcVMZ5APDJqnaGSillDT1ZBucfMIudoBurYQTmonXVwb0E8UwrVsxrYVPyg3lWoKxvD8T6EuwbEoAAevsqlYYggzTXjkfE8vU8poBCcgniL3Mkstfu&__tn__=%2CO%2CP-R"
+        class="blue">View in Facebook</a>
+    </div>
+    <div class="project-item">
+      <h2><span class="yellow">1st prize in PI'HACKS Hackathon</span></h2>
+      <h3>I and my team, made a news aggregating bot API that collects news from different reputable news papers in
+        Bangladesh, and posts them on Facebook using the FB API</h3>
+      <p><b class="orange">Technologies: </b> Python, JS, Google Bucket, Facebook API</p>
+      <a href="https://www.facebook.com/untangled.news" class="blue">View in Facebook</a>
+    </div>
   </div>
 
 </body>
